# fall_detection

./: CMakeLists.txt  README.md  README_cn.md  build.sh  deploy.sh  graph.config  main.cpp  main.h  run_facialrecognitionapp.sh  stop_facialrecognitionapp.sh
MyModel/vanillacnn/device/: vanillacnn.om
device_engines/: CMakeLists.txt  ImagePreProcessEngine.cpp  ImagePreProcessEngine.h  OpenPoseInferenceEngine.cpp
facialrecognitionapp/: Makefile  graph_deploy.config  graph_template.config  main.cpp
facialrecognitionapp/OpenposeInference/: Makefile  OpenposeInference.cpp  OpenposeInference.h
facialrecognitionapp/PafmapResize/: Makefile  PafmapResize.cpp  PafmapResize.h
facialrecognitionapp/Postprocess/: Makefile  Postprocess.cpp  Postprocess.h
facialrecognitionapp/SendDataToHost/: Makefile  SendDataToHost.cpp  SendDataToHost.h
facialrecognitionapp/common/: MindPublish.cpp
facialrecognitionapp/common/include/: BatchImageParaWithScale.h  face_recognition_params.h
facialrecognitionapp/face_detection/: face_detection.cpp
facialrecognitionapp/face_feature_mask/: face_feature_mask.cpp
facialrecognitionapp/face_post_process/: Makefile  face_post_process.cpp
facialrecognitionapp/face_recognition/: Makefile  face_recognition.cpp  face_recognition.h
facialrecognitionapp/face_register/: Makefile  face_register.cpp  face_register.h  face_register_listen.cpp  face_register_listen.h
facialrecognitionapp2/: Makefile  README.md  graph.config
facialrecognitionapp2/common/: BatchImageParaWithScale.cpp
facialrecognitionapp2/device_engines/: OpenPoseInferenceEngine.cpp  OpenPoseInferenceEngine.h  PostProcessEngine.h  ResizeEngine.cpp
facialrecognitionapp2/host_engines/: DataInputEngine.cpp  DataInputEngine.h  SaveFileEngine.h
host_engines/: CMakeLists.txt  DataInputEngine.cpp  SaveFileEngine.cpp
postprocess_engines/: CMakeLists.txt  PostProcessEngine.cpp
presenterserver/facial_recognition/config/: config.conf
presenterserver/facial_recognition/src/: facial_recognition_server.py
resize_engines/: CMakeLists.txt  ResizeEngine.h
script/: aipp_sphereface.cfg  build.sh  prepare_presenter_server.sh  shape_sphereface  shape_vanillacnn
